T&C + alumni view logo

--- a/force-app/main/default/classes/HomePageParticipantRemote.cls
+++ b/force-app/main/default/classes/HomePageParticipantRemote.cls
@@ -4,28 +4,10 @@
 
 public class HomePageParticipantRemote {
     
-    public class InitData{
-        public Participant_Enrollment__c pe;
-        public Participant_Study_Enrollment__c pse;
-        public String name;
-    }
-    
     @AuraEnabled
     public static String getInitData(){
         try{
-            ParticipantService.ParticipantState participantState = ParticipantService.getParticipantState();
-
-            InitData initData = new InitData();
-            initData.pe = participantState.pe;
-            initData.pse = participantState.pse;
-            if(participantState.isDelegate) {
-                initData.name = (String) CommunityService.getUserContact().get('Name');
-            }
-            else {
-                initData.name = initData.pe.Participant__r.Full_Name__c;
-            }
-
-            return JSON.serialize(initData);
+            return JSON.serialize(ParticipantService.getInstance().getState());
         }catch (Exception e){
              return (String) AuraHelper.throwException(e);
         }
