--- a/force-app/main/default/classes/RRPDFViewerController.cls
+++ b/force-app/main/default/classes/RRPDFViewerController.cls
@@ -6,18 +6,14 @@ public with sharing class RRPDFViewerController {
         executeJS = false;
     }
 
-    public RRPDFViewerController() {
+    public RRPDFViewerController() {}
+
+    public void initData() {
 
         Map<String, String> parameters = ApexPages.currentPage().getParameters();
         String resourceId = parameters.get('resourceId');
-        DatabaseProxy databaseProxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class);
-        String documentLinksQuery =
-                'SELECT ContentDocument.LatestPublishedVersion.Title, ' +
-                        'ContentDocument.LatestPublishedVersion.VersionData ' +
-                        'FROM ContentDocumentLink ' +
-                        'WHERE LinkedEntityId = \'' + resourceId + '\' ' +
-                        'ORDER BY ContentDocument.CreatedDate DESC';
-        List<ContentDocumentLink> documentLinks = (List<ContentDocumentLink>) databaseProxy.query(documentLinksQuery);
+        ContentDocumentLinkService contentDocumentLinkService = (ContentDocumentLinkService) ClassFactory.newInstance(ContentDocumentLinkService.class);
+        List<ContentDocumentLink> documentLinks = contentDocumentLinkService.getContentDocumentLinksByResourcesIds(new Set<String>{resourceId});
         if (!documentLinks.isEmpty()) {
             this.fileName = documentLinks[0].ContentDocument.LatestPublishedVersion.Title;
             this.pdfBlobDataInBase64StringFormat = EncodingUtil.base64Encode(documentLinks[0].ContentDocument.LatestPublishedVersion.VersionData);
