--- a/force-app/main/default/classes/ContentDocumentLinkService.cls
+++ b/force-app/main/default/classes/ContentDocumentLinkService.cls
@@ -6,7 +6,7 @@ public with sharing class ContentDocumentLinkService {
             return new List<ContentDocumentLink>();
         }
         List<String> resourcesIds = new List<String>();
-        for(String resourceId : resourcesIdsSet) {
+        for (String resourceId : resourcesIdsSet) {
             resourcesIds.add('\'' + resourceId + '\'');
         }
         DatabaseProxy databaseProxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class);
@@ -17,5 +17,16 @@ public with sharing class ContentDocumentLinkService {
                         'WHERE LinkedEntityId IN (' + String.join(resourcesIds, ', ') + ') ' +
                         'ORDER BY ContentDocument.CreatedDate DESC';
         return (List<ContentDocumentLink>) databaseProxy.query(documentLinksQuery);
+    }
+
+    public void extendSharingToAllUsers(List<ContentDocumentLink> links) {
+
+        for (ContentDocumentLink singleLink : links) {
+            if (singleLink.LinkedEntityId.getSobjectType() == Resource__c.getSObjectType() &&
+                    SchemaUtil.getRecordTypeDeveloperNameBySObjectId(singleLink.LinkedEntityId) == ResourceService.RESOURCE_RECORD_TYPE_NAME_STUDY_DOCUMENT) {
+                singleLink.ShareType = 'I';
+                singleLink.Visibility = 'AllUsers';
+            }
+        }
     }
 }
